opam-version: "2.0"
name: "anders"
version: "1.1.1"
maintainer: "Namdak Tonpa <maxim@synrc.com>"
authors: [
  "Namdak Tonpa @5HT"
  "Siegmentation Fault @siegment"
]
homepage: "https://groupoid.space/homotopy/"
bug-reports: "https://github.com/groupoid/anders/issues"
dev-repo: "git+https://github.com/groupoid/anders"
synopsis: "Modal Homotopy Type System"
license: "ISC"
depends: [
  "dune" {>= "2.0"}
  "zarith" {>= "1.12"}
  "ocaml" {>= "4.10"}
  "menhir" {>= "20200123"}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
