(env (dev (flags (:standard -warn-error -A))))

(install (files library/mathematics/meta/buddhism.anders library/mathematics/categories/cat.anders
                library/mathematics/categories/fun.anders library/foundations/mltt/list.anders
                library/mathematics/meta/impredicative.anders library/mathematics/meta/kraus.anders
                library/foundations/mltt/mltt.anders library/foundations/univalent/path.anders
                library/foundations/univalent/equiv.anders library/mathematics/homotopy/constcubes.anders
                library/mathematics/categories/ab.anders library/mathematics/algebra/algebra.anders
                library/foundations/mltt/pi.anders library/mathematics/topoi/topos.anders) (section share) (package anders))
