(env (dev (flags (:standard -warn-error -A))))

(install (files lib/foundations/mltt/proto.anders
                lib/foundations/mltt/bool.anders
                lib/foundations/mltt/inductive.anders
                lib/foundations/mltt/list.anders
                lib/foundations/mltt/pi.anders
                lib/foundations/mltt/sigma.anders
                lib/foundations/univalent/path.anders
                lib/foundations/univalent/equiv.anders
                lib/foundations/univalent/iso.anders
                lib/foundations/modal/infinitesimal.anders
                lib/mathematics/algebra/algebra.anders
                lib/mathematics/analysis/real.anders
                lib/mathematics/categories/category.anders
                lib/mathematics/categories/functor.anders
                lib/mathematics/categories/abelian.anders
                lib/mathematics/categories/groupoid.anders
                lib/mathematics/categories/topos.anders
                lib/mathematics/geometry/bundle.anders
                lib/mathematics/geometry/etale.anders
                lib/mathematics/geometry/formalDisc.anders
                lib/mathematics/homotopy/coequalizer.anders
                lib/mathematics/homotopy/constcubes.anders
                lib/mathematics/homotopy/pullback.anders
                lib/mathematics/homotopy/pushout.anders
                lib/mathematics/homotopy/hubSpokes.anders
                lib/mathematics/homotopy/quotient.anders
                lib/mathematics/homotopy/truncation.anders
                lib/mathematics/homotopy/suspension.anders
                lib/mathematics/homotopy/S1.anders
                lib/mathematics/homotopy/Sn.anders
                lib/mathematics/homotopy/KGn.anders)
         (section share) (package anders))
